--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -6,7 +6,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "outDir": "../../dist/server"
   },
   "exclude": [
     "typings/browser",
