--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
