--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "license": "MIT",
   "dependencies": {
     "angular2": "^2.0.0-beta.6",
+    "connect-mongo": "^1.1.0",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "morgan": "^1.6.1",
     "reflect-metadata": "0.1.2",
+    "request": "^2.69.0",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "^0.19.20",
     "zone.js": "0.5.14"
