--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "angular2": "^2.0.0-beta.6",
+    "angular2": "^2.0.0-beta.9",
     "connect-mongo": "^1.1.0",
+    "dotenv-safe": "^2.2.0",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "morgan": "^1.6.1",
+    "morgan": "^1.7.0",
     "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
-    "rxjs": "5.0.0-beta.0",
-    "systemjs": "^0.19.20",
-    "zone.js": "0.5.14"
+    "rxjs": "5.0.0-beta.2",
+    "systemjs": "^0.19.24",
+    "zone.js": "0.5.15"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
@@ -39,9 +40,9 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^4.3.2",
+    "gulp-tslint": "^4.3.3",
     "gulp-tslint-stylish": "^1.1.1",
-    "gulp-typescript": "^2.11.0",
-    "tslint": "^3.3.0"
+    "gulp-typescript": "^2.12.1",
+    "tslint": "^3.6.0"
   }
 }
