--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "angular2": "^2.0.0-beta.9",
+    "app-root-path": "^1.0.0",
     "connect-mongo": "^1.1.0",
     "dotenv-safe": "^2.2.0",
     "es6-promise": "^3.0.2",
@@ -36,7 +37,6 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
