--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "es6-shim": "^0.33.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "helmet": "^1.3.0",
     "morgan": "^1.7.0",
     "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
