--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "helmet": "^1.3.0",
+    "irc": "^0.4.1",
     "morgan": "^1.7.0",
     "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
