--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bot",
     "irc"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0",
   "dependencies": {
     "angular2": "^2.0.0-beta.9",
     "app-root-path": "^1.0.0",
