--- a/package.json
+++ b/package.json
@@ -20,31 +20,31 @@
   ],
   "license": "GPL-3.0",
   "dependencies": {
-    "angular2": "^2.0.0-beta.9",
+    "angular2": "^2.0.0-beta.13",
     "app-root-path": "^1.0.0",
     "connect-mongo": "^1.1.0",
-    "dotenv-safe": "^2.2.0",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "dotenv-safe": "^2.3.1",
+    "es6-shim": "^0.35.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "glob": "^7.0.3",
     "helmet": "^1.3.0",
-    "irc": "^0.4.1",
+    "irc": "^0.5.0",
     "morgan": "^1.7.0",
     "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
     "rxjs": "5.0.0-beta.2",
-    "systemjs": "^0.19.24",
-    "zone.js": "0.5.15"
+    "systemjs": "^0.19.25",
+    "zone.js": "^0.6.6"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^4.3.3",
+    "gulp-tslint": "^4.3.4",
     "gulp-tslint-stylish": "^1.1.1",
-    "gulp-typescript": "^2.12.1",
+    "gulp-typescript": "^2.12.2",
     "tslint": "^3.6.0"
   }
 }
