--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular2": "^2.0.0-beta.13",
     "app-root-path": "^1.0.0",
     "connect-mongo": "^1.1.0",
+    "debug": "^2.2.0",
     "dotenv-safe": "^2.3.1",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
