--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "system",
+    "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
     "noImplicitAny": true,
-    "outDir": "../../dist/server"
+    "outDir": "../../dist/client"
   },
   "exclude": [
-    "typings/browser",
-    "typings/browser.d.ts"
+    "typings/main",
+    "typings/main.d.ts"
   ]
 }
