--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "A twitch bot providing IRC based assistance",
   "author": "Jonas Bürkel <buerkelj@gmail.com>",
   "scripts": {
-    "dist": "npm run dist.server",
+    "dist": "npm run dist.client && npm run dist.server",
+    "dist.client": "rimraf ./dist/client/ && gulp dist.client",
     "dist.server": "rimraf ./dist/server/ && gulp dist.server",
-    "lint": "npm run lint.server",
+    "lint": "npm run lint.client && npm run lint.server",
+    "lint.client": "gulp lint.client",
     "lint.server": "gulp lint.server",
-    "postinstall": "npm prune && npm run typings.install && npm run dist",
+    "postinstall": "npm prune && npm run typings && npm run dist",
     "start": "node ./dist/server/bin/www.js",
-    "typings": "typings",
-    "typings.install": "npm run typings.client && npm run typings.server",
+    "typings": "npm run typings.client && npm run typings.server",
     "typings.client": "rimraf ./src/client/typings/ && (cd ./src/client/ && typings install)",
     "typings.server": "rimraf ./src/server/typings/ && (cd ./src/server/ && typings install)"
   },
@@ -49,12 +50,18 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^4.3.4",
     "gulp-tslint-stylish": "^1.1.1",
     "gulp-typescript": "^2.12.2",
+    "gulp-uglify": "^1.5.3",
     "rimraf": "^2.5.2",
     "tslint": "^3.6.0",
     "typings": "^0.7.12"
