--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dist": "npm run dist.client && npm run dist.server",
     "dist.client": "rimraf ./dist/client/ && gulp dist.client",
     "dist.server": "rimraf ./dist/server/ && gulp dist.server",
+    "http": "node ./dist/server/bin/http.js",
+    "https": "node ./dist/server/bin/https.js",
     "lint": "npm run lint.client && npm run lint.server",
     "lint.client": "gulp lint.client",
     "lint.server": "gulp lint.server",
     "postinstall": "npm prune && npm run typings && npm run dist",
-    "start": "node ./dist/server/bin/www.js",
+    "start": "npm run https",
     "typings": "npm run typings.client && npm run typings.server",
     "typings.client": "rimraf ./src/client/typings/ && (cd ./src/client/ && typings install)",
     "typings.server": "rimraf ./src/server/typings/ && (cd ./src/server/ && typings install)"
