--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "reflect-metadata": "0.1.2",
     "request": "^2.72.0",
     "rxjs": "5.0.0-beta.6",
+    "serve-favicon": "^2.3.0",
     "systemjs": "^0.19.27",
     "zone.js": "^0.6.12"
   },
