--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "angular2": "^2.0.0-beta.17",
     "app-root-path": "^1.0.0",
+    "bootstrap": "^3.3.6",
     "connect-mongo": "^1.1.0",
     "debug": "^2.2.0",
     "dotenv-safe": "^2.3.1",
