--- a/package.json
+++ b/package.json
@@ -38,42 +38,44 @@
     "angular2": "^2.0.0-beta.17",
     "app-root-path": "^1.0.0",
     "bootstrap": "^3.3.6",
-    "connect-mongo": "^1.1.0",
+    "connect-mongo": "^1.2.0",
     "debug": "^2.2.0",
     "dotenv-safe": "^2.3.1",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "glob": "^7.0.3",
-    "helmet": "^2.0.0",
+    "helmet": "^2.1.0",
     "irc": "^0.5.0",
     "morgan": "^1.7.0",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "^0.1.3",
     "request": "^2.72.0",
     "rxjs": "5.0.0-beta.6",
     "serve-favicon": "^2.3.0",
-    "systemjs": "^0.19.27",
+    "systemjs": "^0.19.29",
     "twitchr-plugin-api": "^0.1.0",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "browser-sync": "^2.12.8",
+    "browser-sync": "^2.12.11",
+    "cssnano": "^3.6.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^2.0.0",
-    "gulp-imagemin": "^3.0.0",
-    "gulp-inline-ng2-template": "^1.1.4",
-    "gulp-load-plugins": "^1.2.2",
-    "gulp-nodemon": "^2.0.6",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-inline-ng2-template": "^2.0.3",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-nodemon": "^2.0.7",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^5.0.0",
     "gulp-tslint-stylish": "^1.1.1",
-    "gulp-typescript": "^2.13.2",
+    "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.3",
+    "html-minifier": "^2.1.3",
     "rimraf": "^2.5.2",
-    "tslint": "^3.9.0",
+    "tslint": "^3.10.2",
     "typings": "^0.8.1"
   }
 }
