--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "helmet": "^2.1.0",
     "irc": "^0.5.0",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-twitch": "^1.0.3",
     "reflect-metadata": "^0.1.3",
     "request": "^2.72.0",
     "rxjs": "5.0.0-beta.6",
@@ -83,6 +85,6 @@
     "postcss": "^5.0.21",
     "rimraf": "^2.5.2",
     "tslint": "^3.10.2",
-    "typings": "^1.0.4"
+    "typings": "^1.3.0"
   }
 }
