--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/router": "3.0.0-beta.2",
     "app-root-path": "^1.3.0",
     "bootstrap": "^3.3.7",
+    "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
     "debug": "^2.2.0",
