feat(server): add env variables

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ CALLBACK_URL=
 CLIENT_ID=
 CLIENT_SECRET=
 
+# server
+# PORT_HTTP=8080
+# PORT_HTTPS=8443
+# USE_TLS=false
+
 # misc
 MONGODB_URL=
 SESSION_SECRET=
