--- a/package.json
+++ b/package.json
@@ -30,39 +30,39 @@
   ],
   "license": "GPL-3.0",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "app-root-path": "^1.3.0",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
+    "app-root-path": "^2.0.1",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
     "debug": "^2.2.0",
-    "dotenv-safe": "^2.3.1",
+    "dotenv-safe": "^2.3.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "helmet": "^2.1.2",
+    "helmet": "^2.2.0",
     "irc": "^0.5.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-twitch": "^1.0.3",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
     "serve-favicon": "^2.3.0",
-    "systemjs": "^0.19.37",
+    "systemjs": "^0.19.38",
     "twitchr-example": "^0.3.0",
     "twitchr-plugin-api": "^0.3.0",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "browser-sync": "^2.14.2",
-    "cssnano": "^3.7.4",
+    "autoprefixer": "^6.4.1",
+    "browser-sync": "^2.16.0",
+    "cssnano": "^3.7.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cssnano": "^2.1.2",
@@ -70,14 +70,14 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-inline-ng2-template": "^3.0.1",
     "gulp-inline-source": "^3.0.0",
-    "gulp-load-plugins": "^1.2.4",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^6.1.1",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "^2.14.0",
     "gulp-uglify": "^2.0.0",
-    "html-minifier": "^3.0.2",
-    "postcss": "^5.1.2",
+    "html-minifier": "^3.0.3",
+    "postcss": "^5.2.0",
     "rimraf": "^2.5.4",
     "tslint": "^3.15.1",
     "typings": "^1.3.3"
