--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "html-minifier": "^3.0.3",
     "postcss": "^5.2.0",
     "rimraf": "^2.5.4",
+    "systemjs-builder": "^0.15.32",
     "tslint": "^3.15.1",
     "typings": "^1.3.3"
   }
