chore(docker): add initial docker support

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,8 @@
-# auth
+# OAuth
 CALLBACK_URL=
 CLIENT_ID=
 CLIENT_SECRET=
 
-# server
-# PORT_HTTP=8080
-# PORT_HTTPS=8443
+# Server
 # USE_TLS=false
-
-# misc
-MONGODB_URL=
 SESSION_SECRET=
