--- a/package.json
+++ b/package.json
@@ -5,14 +5,9 @@
   "author": "Jonas Bürkel <buerkelj@gmail.com>",
   "scripts": {
     "dev": "gulp dev",
-    "dist": "npm run dist.client && npm run dist.server",
-    "dist.client": "rimraf dist/client/ && gulp dist.client",
-    "dist.server": "rimraf dist/server/ && gulp dist.server",
+    "dist": "rimraf dist/ && gulp dist",
     "gulp": "gulp",
-    "lint": "npm run lint.client && npm run lint.server",
-    "lint.client": "gulp lint.client",
-    "lint.server": "gulp lint.server",
-    "postinstall": "npm prune && npm run typings && npm run dist",
+    "lint": "gulp lint",
     "start": "node dist/server/bin/www.js",
     "typings": "rimraf typings/ && typings install"
   },
@@ -43,7 +38,6 @@
     "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
     "debug": "^2.2.0",
-    "dotenv-safe": "^2.3.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "helmet": "^2.2.0",
