--- a/package.json
+++ b/package.json
@@ -25,38 +25,38 @@
   ],
   "license": "GPL-3.0",
   "dependencies": {
-    "@angular/common": "^2.1.2",
-    "@angular/compiler": "^2.1.2",
-    "@angular/core": "^2.1.2",
-    "@angular/http": "^2.1.2",
-    "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "^2.1.2",
-    "@angular/router": "^3.1.2",
+    "@angular/common": "^2.4.7",
+    "@angular/compiler": "^2.4.7",
+    "@angular/core": "^2.4.7",
+    "@angular/http": "^2.4.7",
+    "@angular/platform-browser": "^2.4.7",
+    "@angular/platform-browser-dynamic": "^2.4.7",
+    "@angular/router": "^3.4.7",
     "app-root-path": "^2.0.1",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
-    "debug": "^2.3.2",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "helmet": "^3.1.0",
-    "irc": "^0.5.0",
-    "morgan": "^1.7.0",
+    "debug": "^2.6.1",
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "helmet": "^3.4.0",
+    "irc": "^0.5.2",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-twitch": "^1.0.3",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "serve-favicon": "^2.3.0",
-    "systemjs": "^0.19.41",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.1.1",
+    "serve-favicon": "^2.3.2",
+    "systemjs": "^0.20.9",
     "twitchr-example": "^0.3.0",
     "twitchr-plugin-api": "^0.3.0",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.7.7"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "browser-sync": "^2.17.5",
-    "cssnano": "^3.8.0",
+    "autoprefixer": "^6.7.3",
+    "browser-sync": "^2.18.8",
+    "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cssnano": "^2.1.2",
@@ -64,18 +64,18 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-inline-ng2-template": "^4.0.0",
     "gulp-inline-source": "^3.0.0",
-    "gulp-load-plugins": "^1.4.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-tslint": "^6.1.3",
-    "gulp-typescript": "^3.1.2",
-    "gulp-uglify": "^2.0.0",
-    "html-minifier": "^3.1.1",
-    "postcss": "^5.2.5",
-    "rimraf": "^2.5.4",
-    "systemjs-builder": "^0.15.34",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.9",
-    "typings": "^2.0.0"
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-tslint": "^7.1.0",
+    "gulp-typescript": "^3.1.5",
+    "gulp-uglify": "^2.0.1",
+    "html-minifier": "^3.3.1",
+    "postcss": "^5.2.14",
+    "rimraf": "^2.6.0",
+    "systemjs-builder": "^0.16.3",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.6",
+    "typings": "^2.1.0"
   }
 }
