--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dist": "rimraf dist/ && gulp dist",
     "gulp": "gulp",
     "lint": "gulp lint",
-    "start": "node dist/server/bin/www.js",
-    "typings": "rimraf typings/ && typings install"
+    "start": "node dist/server/bin/www.js"
   },
   "repository": {
     "type": "git",
@@ -54,6 +53,19 @@
     "zone.js": "^0.7.7"
   },
   "devDependencies": {
+    "@types/app-root-path": "^1.2.4",
+    "@types/compression": "0.0.33",
+    "@types/connect-mongo": "0.0.32",
+    "@types/core-js": "^0.9.35",
+    "@types/debug": "0.0.29",
+    "@types/express": "^4.0.35",
+    "@types/express-session": "0.0.32",
+    "@types/helmet": "0.0.33",
+    "@types/irc": "^0.3.32",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.5",
+    "@types/passport": "^0.3.3",
+    "@types/serve-favicon": "^2.2.28",
     "autoprefixer": "^6.7.3",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
@@ -75,7 +87,6 @@
     "rimraf": "^2.6.0",
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.4.2",
-    "typescript": "^2.1.6",
-    "typings": "^2.1.0"
+    "typescript": "^2.1.6"
   }
 }
