--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "noUnusedLocals": true
   }
 }
