--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,12 +1,21 @@
-web:
-  build: .
-  env_file: .env
-  environment:
-    MONGODB_URL: mongodb://mongo
-    NODE_ENV: production
-  links:
-    - mongo
-  ports:
-    - "3000:3000"
-mongo:
-  image: mongo
+version: "3"
+services:
+  app:
+    build: .
+    depends_on:
+      - mongo
+    env_file: .env
+    environment:
+      - MONGODB_URL=mongodb://mongo
+      - NODE_ENV=production
+    networks:
+      - back-tier
+    ports:
+      - "3000:3000"
+  mongo:
+    image: mongo
+    networks:
+      - back-tier
+networks:
+  back-tier:
+    driver: bridge
