--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "@types/app-root-path": "^1.2.4",
     "@types/compression": "0.0.33",
     "@types/connect-mongo": "0.0.32",
-    "@types/core-js": "^0.9.35",
+    "@types/core-js": "0.9.36",
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
     "@types/helmet": "0.0.33",
     "@types/irc": "^0.3.32",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.5",
+    "@types/node": "7.0.7",
     "@types/passport": "^0.3.3",
     "@types/serve-favicon": "^2.2.28",
     "autoprefixer": "^6.7.3",
